# eigenform

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.claude/skills/vetting-claude-internals/: SKILL.md
crates/daemon/: Cargo.toml
crates/daemon/src/: events.rs  host.rs  lib.rs
crates/daemon/tests/: candidates_route.rs  dev.rs  embedded.rs  events_route.rs  forest_route.rs  host.rs  host_routes.rs  inspect_route.rs  path_probe.rs  pty.rs  pty_create.rs  recover_downgrade_route.rs  rephrase.rs  session_json_subagents_route.rs  session_route.rs  term_app.rs  ws.rs
crates/daemon/tests/helpers/: mod.rs
crates/eigen-cli/: Cargo.toml
crates/eigen-cli/src/: main.rs
crates/eigen-cli/tests/: cli_candidates.rs  cli_sessions.rs  cli_surgery.rs
crates/eigenform-cli/: Cargo.toml
crates/eigenform-cli/src/: main.rs
crates/eigenform-cli/tests/: cli_candidates.rs  cli_sessions.rs  cli_surgery.rs
crates/forest/: Cargo.toml
crates/forest/src/: lib.rs
crates/forest/tests/: list.rs  live.rs  peek.rs  resolve.rs  spark.rs  subagents.rs
crates/inspect/: Cargo.toml
crates/inspect/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/memory/tests/: render.rs  scan.rs
crates/projects/: Cargo.toml
crates/projects/src/: lib.rs
crates/projects/tests/: candidates.rs  enumerate.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs
crates/render/tests/: diff.rs  html.rs  session.rs  sessions.rs  text.rs
crates/skills/: Cargo.toml
crates/skills/src/: lib.rs
crates/skills/tests/: all_projects.rs  canonical.rs  layers.rs  render.rs  scan.rs
crates/surgery/: Cargo.toml
crates/surgery/src/: lib.rs
crates/surgery/tests/: corpus.rs  edit.rs  fork.rs  fork_before.rs  inject.rs  parse.rs  rewrite.rs  roundtrip.rs  write.rs
docs/launch/: 2026-07-04-launch-kit.md
docs/plans/: 2026-06-02-eigen-foundation-design.md  2026-06-03-claude-design-brief.md  2026-06-03-forest-crate-design.md  2026-06-03-render-crate-design.md  2026-06-03-surgery-crate-design.md  2026-06-03-woland-design.md  2026-06-05-woland-redesign-implementation.md  2026-06-06-woland-forest-affordances-design.md  2026-06-06-woland-live-forest-design.md  2026-06-09-woland-blocked-input-and-fuzzy-picker-design.md  2026-06-11-eigen-terminal-centerpiece-gui-design.md  2026-06-11-terminal-centerpiece-gui-implementation.md  2026-06-22-terminal-theming-design.md  2026-06-26-forest-preview-float-design.md  2026-06-30-unified-inspect-design.md  2026-07-02-fable-downgrade-recovery-design.md  2026-07-02-fable-downgrade-recovery-implementation.md  2026-07-02-live-session-clarity-design.md
notes/spikes/: 01-jsonl-liveness.md  02-tail-fork.md  03-mid-tree-cold-load.md  04-billing-flip.md  05-bundled-skills.md  06-project-local-skill-pickup.md  07-cross-version-passthrough.md  08-tui-selector-widget.md  08-tui-selector-widget.py  09-tui-altscreen-scrollback.md  09-tui-altscreen-scrollback.py  10-resume-model-derivation.md  11-session-id-snake-case.md  12-guardrail-marker.md  13-resume-session-identity.md  README.md
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: clock.ts  cooling.test.ts  cooling.ts  data.ts  dom.ts  epigraphs.test.ts  epigraphs.ts  main.ts  manuscript.ts  markdown.test.ts  markdown.ts  marks.ts  mind.ts  prefs.ts  shell.ts  theme.ts  types.d.ts  woland.css
webterm/: index.html  package-lock.json  package.json  tsconfig.json
webterm/src/: downgrade.test.ts  downgrade.ts  drawer.ts  events.test.ts  events.ts  forest-preview.test.ts  forest-preview.ts  fuzzy.test.ts  fuzzy.ts  icons.ts  inspect.test.ts  inspect.ts  main.ts  picker.test.ts  picker.ts  pty.ts  reach.test.ts  reach.ts  reachmap.ts  reachviews.test.ts  reachviews.ts  roster.test.ts  roster.ts  shell-helpers.ts  shell.test.ts  shell.ts  style.css  toolview.test.ts  toolview.ts  turns.test.ts  turns.ts  types.ts  watch.test.ts  watch.ts
webterm/src/themes/: derive.test.ts  derive.ts  schemes.test.ts  schemes.ts
