[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.83"

[workspace.dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow     = "1"
thiserror  = "1"
clap       = { version = "4", features = ["derive"] }
tempfile   = "3"
uuid       = { version = "1", features = ["v4"] }
