[package]
name = "eigen-daemon"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow       = { workspace = true }
thiserror    = { workspace = true }
portable-pty = { workspace = true }
vt100        = { workspace = true }
tokio        = { workspace = true }
axum         = { workspace = true }
futures-util = { workspace = true }
tower-http   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
notify       = { workspace = true }
tokio-stream = { workspace = true }
eigen-forest   = { path = "../forest" }
eigen-surgery  = { path = "../surgery" }
eigen-render   = { path = "../render" }
eigen-projects = { path = "../projects" }

[dev-dependencies]
tokio-tungstenite = "0.21"
futures-util      = { workspace = true }
tokio             = { workspace = true }
tempfile          = { workspace = true }
