[package]
name = "eigen-cli"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "eigen"
path = "src/main.rs"

[dependencies]
anyhow         = { workspace = true }
clap           = { workspace = true }
eigen-skills   = { path = "../skills" }
eigen-projects = { path = "../projects" }
eigen-memory   = { path = "../memory" }
