[package]
name = "eigenform-cli"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "eigenform"
path = "src/main.rs"

[features]
# Forward to the daemon: bake the webterm build into the binary. Turn on for
# release / `cargo install` (after `just build`) to get a self-contained `eigenform`.
embed-assets = ["eigenform-daemon/embed-assets"]

[dependencies]
anyhow         = { workspace = true }
clap           = { workspace = true }
eigenform-skills   = { path = "../skills" }
eigenform-projects = { path = "../projects" }
eigenform-memory   = { path = "../memory" }
eigenform-inspect  = { path = "../inspect" }
eigenform-surgery  = { path = "../surgery" }
eigenform-render   = { path = "../render" }
eigenform-forest   = { path = "../forest" }
eigenform-daemon   = { path = "../daemon" }
chrono         = { workspace = true }
tokio          = { workspace = true }
ureq           = { workspace = true }
serde_json     = { workspace = true }
terminal_size  = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
