[package]
name = "eigen-forest"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde_json     = { workspace = true }
thiserror      = { workspace = true }
chrono         = { workspace = true }
eigen-projects = { path = "../projects" }

[dev-dependencies]
tempfile = { workspace = true }
