[package]
name = "eigenform-inspect"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror          = { workspace = true }
eigenform-skills   = { path = "../skills" }
eigenform-memory   = { path = "../memory" }
eigenform-projects = { path = "../projects" }

[dev-dependencies]
tempfile = { workspace = true }
